--- a/client2/index.html
+++ b/client2/index.html
@@ -14,6 +14,8 @@
         <div id="grid">
         </div>
         <button id="resetButton">Reset</button>
+        <button id="changeColor">changeColor</button>
+        <div id="cursor-follower"></div>
     </div>
     </div>
    </div> 
