move waiting into struct

--- a/client2/index.html
+++ b/client2/index.html
@@ -14,7 +14,7 @@
         <div id="grid">
         </div>
         <button id="resetButton">Reset</button>
-        <button id="changeColor">changeColor</button>
+        <button id="changeColor">Change Color</button>
         <div id="cursor-follower"></div>
     </div>
     </div>
